# pv278-weather-advisor

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml  deploy_master.yml  pr_preview.yml  test.yml
public/: index.html  landing_page_background.avif  manifest.json
python/: README.md  create_json_data.py  extract_section.py  scrape_data.py
src/: App.tsx  auth_config.json  index.tsx  serviceWorkerRegistration.ts  stateContext.tsx
src/components/: BackButton.tsx  Dashboard.tsx  DataSource.tsx  Header.tsx  HintModal.tsx  LandingPage.tsx  Layout.tsx  Lightning.tsx  Location.tsx  LoginButton.tsx  LogoutButton.tsx  Profile.tsx  Range.tsx  RangeWithIcons.tsx  RoutesSwitch.tsx  Select.tsx  Stars.tsx  Table.tsx
src/components/CzechMap/: CzechMap.tsx
src/components/Dashboard/: Dashboard.tsx  activities.ts  getRatings.ts  mergeRatings.test.ts  mergeRatings.ts  rangeConfig.ts
src/data/: data.json  downloadCzechStationsData.ts  locations.json  script.ts  types.ts
