[tool.poetry]
name = "pv278-weather-advisor"
version = "0.1.0"
description = ""
authors = ["Petr Janik <peta.janik@email.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
selenium = "^4.4.3"
pandas = "^1.5.0"
zipfile2 = "^0.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
